--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,10 @@
 ---
 multiple:
-   numbers: 1
+   cpu_number: 1
+   thread_number: 3
 src:
    endpoint: jp-east-2.os.cloud.nifty.com
-   bucketname: 
+   bucketname:
    access_key:
    secret_key:
    headers:
